--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -17,8 +17,10 @@ header, hgroup, menu, nav, section, summary, time, mark, audio, video {
 /* General CSS for contents */
 body {
   font-weight: normal;
+  font-family: serif;
   font-size: 10pt;
-  color: black; }
+  color: #555555; 
+}
 
 p {
   font-size: 10pt;
@@ -84,6 +86,7 @@ sup {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   color: #FF4229;
+  font-family: sans;
   text-align: left;
   text-transform: lowercase; }
   h1 em, h1 .Italic, h2 em, h2 .Italic, h3 em, h3 .Italic, h4 em, h4 .Italic, h5 em, h5 .Italic, h6 em, h6 .Italic {
